# purrcrypt

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
benches/: compression_benchmarks.rs  efficient_cipher_benchmarks.rs  post_quantum_benchmarks.rs  steganographic_rp_benchmarks.rs
scripts/: test_runner.sh
src/: config.rs  crypto.rs  debug.rs  keys.rs  keystore.rs  lib.rs  main.rs
src/cipher/: efficient.rs  mod.rs  patterns.rs  steganographic_rp.rs
src/crypto/: efficient_compression.rs  post_quantum.rs
tests/: integration_tests.rs
