[package]
name = "purrcrypt"
version = "0.1.0"
edition = "2021"
authors = ["sad <sad@im.gay>"]
description = "A cat-and-dog-themed pgp-like encryption tool"
readme = "README.md"
homepage = "https://github.com/vxfemboy/purrcrypt"
repository = "https://github.com/vxfemboy/purrcrypt"
license = "MIT"
keywords = ["encryption", "security", "cryptography", "cli", "cat"]
categories = ["command-line-utilities", "cryptography"]

[[bin]]
name = "purr"
path = "src/main.rs"

[dependencies]
flate2 = "1.0.35"
regex = "1.11.1"
elliptic-curve = "0.13.8"
rand_core = "0.6.4"
k256 = { version = "0.13.3", features = ["ecdh"] }
aes-gcm = "0.10.3"
base64 = "0.21.7"
thiserror = "1.0"
dirs = "5.0.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
toml = "0.5.8"
