[package]
name = "purrcrypt"
version = "0.1.0"
edition = "2021"
authors = ["sad <sad@im.gay>"]
description = "A cat-and-dog-themed pgp-like encryption tool"
readme = "README.md"
homepage = "https://github.com/vxfemboy/purrcrypt"
repository = "https://github.com/vxfemboy/purrcrypt"
license = "MIT"
keywords = ["encryption", "security", "cryptography", "cli", "cat"]
categories = ["command-line-utilities", "cryptography"]

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
codegen-units = 1
panic = "abort"
incremental = false

[[bin]]
name = "purr"
path = "src/main.rs"

[dependencies]
flate2 = "1.0.35"
zstd = "0.13.3"
regex = "1.11.1"
elliptic-curve = "0.13.8"
rand_core = "0.9.3"
rand = "0.9.0"
k256 = { version = "0.13.3", features = ["ecdh"] }
aes-gcm = "0.10.3"
chacha20poly1305 = "0.10.1"
base64 = "0.22.1"
thiserror = "2.0.12"
dirs = "6.0.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
toml = "0.9.7"
# Post-quantum cryptography
pqcrypto-kyber = "0.8.1"
pqcrypto-traits = "0.3.5"
hkdf = "0.12.4"
sha2 = "0.10.9"

# Benchmarking
[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
rand = "0.9.0"

[[bench]]
name = "steganographic_rp_benchmarks"
harness = false

[[bench]]
name = "efficient_cipher_benchmarks"
harness = false

[[bench]]
name = "post_quantum_benchmarks"
harness = false

[[bench]]
name = "compression_benchmarks"
harness = false